--- a/intro.html
+++ b/intro.html
@@ -6,17 +6,16 @@
 </head>
 <body>
   <p>Diana</p>
-  <p>Insert the current date</p>
-  <p>Internet the name of the course</p>
-  <p>Internet your instructor's name</p>
+  <p>August 30, 2022</p>
+  <p>HTML and Programming</p>
+  <p>Professor Kenny </p>
   <hr>
-
   <p>Insert the degree or certificate you working toward</p>
-  <p>Insert any relative work experience or web page development experience</p>
-  <p>Insert a fun fact about yourself</p>
-  <hr>
-
-  <p>Insert any questions you have at this time</p>
-
+  <p> We Development  </p>
+  <p> I created websites as assignments in trade school. </p>
+  <p> I received a certificate in programming BOCES in Goshen, NY
+  <p> Web Development degree </p>
+  <p> </p>
+  <p> How many pages does our website project need to have?</p?
 </body>
 </html>
